--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -10,6 +10,8 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/usuarios" routerLinkActive="active">Usuarios</a>
       <a class="nav-item nav-link" routerLink="/monkeys" >Monos</a>
+      <a class="nav-item nav-link" routerLink="/equipos" >Equipos</a>
+      <a class="nav-item nav-link" routerLink="/jugadores" >Jugadores</a>
     </div>
   </div>
 </nav>
