--- a/src/app/components/jugadores/jugadores.component.html
+++ b/src/app/components/jugadores/jugadores.component.html
@@ -1,7 +1,15 @@
-<div class="row"></div><h1>Monos</h1>
+<div class="row"></div><h1>Jugadores</h1>
 <div style="width: 100%; height: auto; background-color: #212529">
-  <h5 class="nuevojugadorBtn"><span (click)="newJugador()">Nuevo Jugaodor <i class="fas fa-spinner fa-spin"></i> </span> <span style="float: right;font-weight: lighter">Numero de jugadores : {{listadojugadores.length}}</span></h5>
+  <h5 class="nuevojugadorBtn">
+    <!--<button class="btn btn-primary" (click)="newJugador()">Nuevo Jugador</button>-->
+    <button class="btn btn-primary" [disabled]="pivots.length >= 20 " (click)="newJugadorByPosition('PIVOT')">Pivot {{pivots.length}}</button>
+    <button class="btn btn-primary" [disabled]="ala_pivots.length >= 20 " (click)="newJugadorByPosition('ALA-PIVOT')">Ala-Pivot {{ala_pivots.length}}</button>
+    <button class="btn btn-primary" [disabled]="aleros.length >= 20 " (click)="newJugadorByPosition('ALERO')">Alero {{aleros.length}}</button>
+    <button class="btn btn-primary" [disabled]="escoltas.length >= 20 " (click)="newJugadorByPosition('ESCOLTA')">Escolta {{escoltas.length}}</button>
+    <button class="btn btn-primary" [disabled]="bases.length >= 20 " (click)="newJugadorByPosition('BASE')">Base {{bases.length}}</button>
+    <span style="float: right;font-weight: lighter">Numero de jugadores : {{listadojugadores.length}}</span></h5>
 </div>
+
 <table class="table table-striped table-hover table-bordered table-dark">
   <!--<caption>Lista de usuarios</caption>-->
   <thead>
