--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-menu></app-menu>
-<app-login></app-login>
+<!--<app-login></app-login>-->
 <div id="appContainer">
   <div class="container">
     <router-outlet></router-outlet>
