--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -11,7 +11,7 @@
       <a class="nav-item nav-link" routerLink="/usuarios" routerLinkActive="active">Usuarios</a>
       <a class="nav-item nav-link" routerLink="/monkeys" >Monos</a>
       <a class="nav-item nav-link" routerLink="/equipos" >Equipos</a>
-      <!--<a class="nav-item nav-link" routerLink="/jugadores" >Jugadores</a>-->
+      <a class="nav-item nav-link" routerLink="/jugadores" >Jugadores</a>
     </div>
   </div>
 </nav>
