--- a/src/app/components/equipos/equipos.component.css
+++ b/src/app/components/equipos/equipos.component.css
@@ -1,47 +1,46 @@
-table caption{
-  color: white;text-shadow: 6px 3px 2px #1d2124;
-}
-
-.nuevojugadorBtn{
-  transition: all 0.2s ease-out;
-  color: #919191;
-  margin: 0px;
-  padding: 12px;
-  cursor: pointer;
-}
-
-.nuevojugadorBtn:hover{
-  color: #ffffff;
-}
-
 .contenedor{
   padding-top: 65px;
   display: grid;
-  grid-template-rows: auto 1fr;
-  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  grid-template-rows: auto auto auto 1fr;
+  grid-template-columns: auto 1fr;
+
+  grid-template-areas:
+    "titulo botones"
+    "ronda total"
+    "jugadores jugadores";
+  align-items: center;
 }
 
-.contenedor > h1 {
-  color: white;font-weight: 300;
-  grid-row: 1 / 2;
-  grid-column: 1 /3;
-  justify-content: space-between;
+.contenedor h1 {
+  grid-area: titulo;
+
+  color: white;
+  font-weight: 300;
+
+  padding-bottom: 32px;
 }
 
-.listaEquipos {
-  height: 200px;
-  grid-row: 2 / 3;
-  grid-column: 1 /2;
+.ronda {
+  grid-area: ronda;
+
+  color: white;
+  font-weight: lighter;
 }
 
-.detalleEquipo {
-  width: 99%;
-  grid-row: 2 / 3;
-  grid-column: 2 /3;
+.botones {
+  grid-area: botones;
+  justify-self: end;
+
+  padding-bottom: 32px;
 }
 
+.total{
+  grid-area: total;
+  justify-self: end;
+}
 
+.jugadores {
+  grid-area: jugadores;
+}
 
-/*.contenedor > * {*/
-  /*align-content: space-between;*/
-/*}*/
