--- a/src/app/components/equipos/equipos.component.css
+++ b/src/app/components/equipos/equipos.component.css
@@ -38,6 +38,10 @@
 .total{
   grid-area: total;
   justify-self: end;
+
+  color: white;
+  font-size: 20px;
+  font-weight: lighter;
 }
 
 .jugadores {
