--- a/src/app/components/jugadores/jugadores.component.html
+++ b/src/app/components/jugadores/jugadores.component.html
@@ -1,49 +1,48 @@
-<div class="row"></div><h1>Jugadores</h1>
-<div style="width: 100%; height: auto; background-color: #212529">
-  <h5 class="nuevojugadorBtn">
-    <!--<button class="btn btn-primary" (click)="newJugador()">Nuevo Jugador</button>-->
+
+<section class="contenedor">
+  <h1>Jugadores</h1>
+  <section class="botones">
     <button class="btn btn-primary" [disabled]="pivots.length >= 60 " (click)="newJugadorByPosition('PIVOT')">Pivot {{pivots.length}}</button>
     <button class="btn btn-primary" [disabled]="ala_pivots.length >= 60 " (click)="newJugadorByPosition('ALA-PIVOT')">Ala-Pivot {{ala_pivots.length}}</button>
     <button class="btn btn-primary" [disabled]="aleros.length >= 60 " (click)="newJugadorByPosition('ALERO')">Alero {{aleros.length}}</button>
     <button class="btn btn-primary" [disabled]="escoltas.length >= 60 " (click)="newJugadorByPosition('ESCOLTA')">Escolta {{escoltas.length}}</button>
     <button class="btn btn-primary" [disabled]="bases.length >= 60 " (click)="newJugadorByPosition('BASE')">Base {{bases.length}}</button>
-    <span style="float: right;font-weight: lighter">Numero de jugadores : {{listadojugadores.length}}</span></h5>
-</div>
-
-<table class="table table-striped table-hover table-bordered table-dark">
-  <!--<caption>Lista de usuarios</caption>-->
-  <thead>
-  <tr>
-    <th scope="col">Editar</th>
-    <th scope="col">Nombre</th>
-    <th scope="col">Edad</th>
-    <th scope="col">Posición</th>
-    <th scope="col">Procedencia</th>
-    <th scope="col">AT</th>
-    <th scope="col">DF</th>
-    <th scope="col">REB</th>
-    <th scope="col">PAS</th>
-    <th scope="col">AGV</th>
-    <th scope="col">SEX</th>
-    <th scope="col">Equipo</th>
-    <th scope="col">Eliminar</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let jugador of listadojugadores; let i=index">
-    <td style="text-align: center;"><i class="fas fa-edit"></i></td>
-    <td>{{jugador.name}}</td>
-    <td>{{jugador.edad}}</td>
-    <td>{{jugador.posicion}}</td>
-    <td>{{jugador.lugar}}</td>
-    <td>{{jugador.atributos.ataque}}</td>
-    <td>{{jugador.atributos.defensa}}</td>
-    <td>{{jugador.atributos.rebotes}}</td>
-    <td>{{jugador.atributos.pase}}</td>
-    <td>{{jugador.atributos.agresividad}}</td>
-    <td>{{jugador.atributos.sexualidad}}</td>
-    <td>{{jugador.team}}</td>
-    <td style="text-align: center; cursor: pointer" (click)="deleteJugador(jugador._id,i)"><i class="fas fa-trash"></i></td>
-  </tr>
-  </tbody>
-</table>
+  </section>
+  <span class="contador">Numero de jugadores : {{listadojugadores.length}}</span>
+  <table class="jugadores table table-striped table-hover table-bordered table-dark table-sm">
+    <thead>
+    <tr>
+      <th scope="col">Editar</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Edad</th>
+      <th scope="col">Posición</th>
+      <th scope="col">Procedencia</th>
+      <th scope="col">AT</th>
+      <th scope="col">DF</th>
+      <th scope="col">REB</th>
+      <th scope="col">PAS</th>
+      <th scope="col">AGV</th>
+      <th scope="col">SEX</th>
+      <th scope="col">Equipo</th>
+      <th scope="col">Eliminar</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let jugador of listadojugadores; let i=index">
+      <td style="text-align: center;"><i class="fas fa-edit"></i></td>
+      <td>{{jugador.name}}</td>
+      <td>{{jugador.edad}}</td>
+      <td>{{jugador.posicion}}</td>
+      <td>{{jugador.lugar}}</td>
+      <td>{{jugador.atributos.ataque}}</td>
+      <td>{{jugador.atributos.defensa}}</td>
+      <td>{{jugador.atributos.rebotes}}</td>
+      <td>{{jugador.atributos.pase}}</td>
+      <td>{{jugador.atributos.agresividad}}</td>
+      <td>{{jugador.atributos.sexualidad}}</td>
+      <td>{{jugador.team}}</td>
+      <td style="text-align: center; cursor: pointer" (click)="deleteJugador(jugador._id,i)"><i class="fas fa-trash"></i></td>
+    </tr>
+    </tbody>
+  </table>
+</section>
