--- a/src/app/components/equipos/equipos.component.html
+++ b/src/app/components/equipos/equipos.component.html
@@ -6,13 +6,14 @@
   <section class="botones">
     <button class="btn" (click)="eliminarEquipos()" style="margin-right: 6px" ><span *ngIf="eliminandoEquipos"><i class="fas fa-circle-notch fa-spin" ></i></span> Eliminar Equipos</button>
     <button class="btn" (click)="generateEquipos()" style="margin-right: 6px"><span style="margin-right: 6px" *ngIf="generandoEquipos"><i class="fas fa-circle-notch fa-spin"></i></span>Generar Equipos</button>
+    <button class="btn" (click)="vaciarEquipos()" style="margin-right: 6px"><span style="margin-right: 6px" *ngIf="vaciarJugadoresEquipo"><i class="fas fa-circle-notch fa-spin"></i></span>Vaciar jugadores de Equipo</button>
   </section>
 
   <h3 class="ronda" *ngIf="equipoSelector">Ronda {{rondaDraft}} - {{equipoSelector.name}}</h3>
   <h3 class="total" *ngIf="listadoEquiposSeleccionables">Número de equipos {{listadoEquiposSeleccionables.length}}</h3>
 
   <section class="jugadores">
-    <table class="table table-striped table-hover table-bordered table-dark table-sm">
+    <table class="table table-striped table-hover table-bordered table-dark table-sm" *ngIf="listadojugadoresSeleccionables.length > 0">
       <thead>
       <tr>
         <th scope="col">Editar</th>
@@ -44,7 +45,8 @@
     </table>
 
   </section>
+</section>
 
-
-
+<section class="mensaje" [hidden]="listadojugadoresSeleccionables.length > 0">
+  <h3>No hay jugadores seleccionables</h3>
 </section>
