--- a/src/app/components/jugadores/jugadores.component.css
+++ b/src/app/components/jugadores/jugadores.component.css
@@ -8,7 +8,7 @@
   grid-template-columns: auto auto;
 
   grid-template-areas:
-    "titulo titulo"
+    "titulo botonesBorrado"
     "botones contador"
     "jugadores jugadores";
   align-items: center;
@@ -27,6 +27,11 @@
   padding: 8px 0px 8px 0px;
   grid-area: botones;
 }
+.contenedor .botonesBorrado{
+  grid-area: botonesBorrado;
+  justify-self: end;
+  align-self: center;
+}
 
 .contenedor .jugadores{
   grid-area: jugadores;
@@ -42,3 +47,20 @@
   font-size: 20px;
   font-weight: lighter;
 }
+
+.mensaje{
+  background-color: #1d2124;
+  padding: 32px;
+  margin-top: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border : solid #333333 thin;
+  border-radius: 3px;
+}
+
+.mensaje > h3{
+  color: white;
+  font-weight: lighter;
+}
+
