--- a/src/app/components/equipos/equipos.component.css
+++ b/src/app/components/equipos/equipos.component.css
@@ -2,11 +2,12 @@
   padding-top: 65px;
   display: grid;
   width: 100%;
-  grid-template-rows: auto auto auto 1fr;
+  grid-template-rows: auto auto auto auto 1fr;
   grid-template-columns: auto 1fr;
 
   grid-template-areas:
     "titulo botones"
+    "cuadroEquipos cuadroEquipos"
     "ronda total"
     "jugadores jugadores";
   align-items: center;
@@ -49,7 +50,7 @@
 }
 
 .mensaje{
-  background-color: #1d2124;
+  background-color: #212529;
   padding: 32px;
   margin-top: 16px;
   display: flex;
@@ -65,6 +66,25 @@
 }
 
 .cuadroEquipos{
+  grid-area: cuadroEquipos;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: flex-start;
+  margin-bottom: 16px;
 
 }
+
+.cuadroEquipos > article {
+  background-color: #212529;
+  padding: 6px 16px 6px 16px;
+  margin-top: 0px;
+  border : solid #333333 thin;
+  color: white;
+}
+
+.cuadroEquipos > article > p {
+  margin: 0px;
+}
+
 
