--- a/src/app/components/equipos/equipos.component.html
+++ b/src/app/components/equipos/equipos.component.html
@@ -15,6 +15,51 @@
     </article>
   </section>
 
+  <section class="descripcionEquipo">
+
+    <h1 class="c">{{equipoSelector.name}}</h1>
+    <section class="plantilla">
+      <h3>Plantilla</h3>
+
+      <table class="table table-striped table-hover table-bordered table-dark table-sm" *ngIf="listadojugadoresSeleccionables.length > 0">
+        <thead>
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Posición</th>
+          <th scope="col">AT</th>
+          <th scope="col">DF</th>
+          <th scope="col">REB</th>
+          <th scope="col">PAS</th>
+          <th scope="col">AGV</th>
+          <th scope="col">SEX</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let jugador of equipoSelector.jugadores; let i=index">
+          <td>{{jugador.name}}</td>
+          <td>{{jugador.posicion}}</td>
+          <td>{{jugador.atributos.ataque}}</td>
+          <td>{{jugador.atributos.defensa}}</td>
+          <td>{{jugador.atributos.rebotes}}</td>
+          <td>{{jugador.atributos.pase}}</td>
+          <td>{{jugador.atributos.agresividad}}</td>
+          <td>{{jugador.atributos.sexualidad}}</td>
+        </tr>
+        </tbody>
+      </table>
+
+      <!--<span *ngFor="let posicion of equipoSelector.jugadores">-->
+        <!--{{posicion.name}}-->
+      <!--</span>-->
+
+
+    </section>
+    <section class="datos">
+      <h3>Datos</h3>
+    </section>
+
+  </section>
+
   <h3 class="ronda" *ngIf="equipoSelector">Ronda {{rondaDraft}} - {{equipoSelector.name}}</h3>
   <h3 class="total" *ngIf="listadoEquiposSeleccionables">Número de equipos {{listadoEquiposSeleccionables.length}}</h3>
 
@@ -45,7 +90,13 @@
         <td>{{jugador.atributos.pase}}</td>
         <td>{{jugador.atributos.agresividad}}</td>
         <td>{{jugador.atributos.sexualidad}}</td>
-        <td><button class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button></td>
+        <td>
+          <button [disabled]="max_p" *ngIf="jugador.posicion == 'PIVOT'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button>
+          <button [disabled]="max_ap" *ngIf="jugador.posicion == 'ALA-PIVOT'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button>
+          <button [disabled]="max_a" *ngIf="jugador.posicion == 'ALERO'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button>
+          <button [disabled]="max_e" *ngIf="jugador.posicion == 'ESCOLTA'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button>
+          <button [disabled]="max_b" *ngIf="jugador.posicion == 'BASE'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button>
+        </td>
       </tr>
       </tbody>
     </table>
