--- a/src/app/components/equipos/equipos.component.css
+++ b/src/app/components/equipos/equipos.component.css
@@ -7,9 +7,9 @@
 
   grid-template-areas:
     "titulo botones"
+    "ronda ronda"
     "cuadroEquipos cuadroEquipos"
     "descripcionEquipo descripcionEquipo"
-    "ronda total"
     "jugadores jugadores";
   align-items: center;
 }
@@ -48,6 +48,16 @@
 
 .jugadores {
   grid-area: jugadores;
+  padding: 16px;
+  background-color: #1d2124;
+  margin-top: 16px;
+}
+
+.jugadores h3{
+  color: white;
+  font-weight: lighter;
+  padding: 0px 8px 8px 8px;
+  text-align: center;
 }
 
 .mensaje{
@@ -73,16 +83,19 @@
   width: 100%;
   justify-content: flex-start;
   margin-bottom: 16px;
+  background-color: #1d2124;
 
 }
 
 .cuadroEquipos > article {
-  background-color: #212529;
+  background-color: #1d2124;
   padding: 12px 16px 12px 16px;
   margin-top: 0px;
-  border : solid #333333 thin;
+  margin: 6px;
+  /*border : solid #333333 thin;*/
   font-weight: lighter;
   color: white;
+  border-radius: 5px;
 }
 
 .descripcionEquipo{
@@ -91,12 +104,10 @@
 
   background-color: #1d2124;
   grid-template-rows: auto auto;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto ;
   grid-template-areas:
-  "nombreEquipo nombreEquipo"
-  "plantilla datos"
-;
-
+  "nombreEquipo"
+  "plantilla";
 }
 
 .descripcionEquipo .plantilla{
@@ -120,8 +131,6 @@
   padding-left: 16px;
   font-weight: lighter;
 }
-
-
 
 
 .cuadroEquipos > article > p {
