--- a/src/app/components/jugadores/jugadores.component.html
+++ b/src/app/components/jugadores/jugadores.component.html
@@ -50,9 +50,9 @@
   </table>
 </section>
 
-<section class="spinner">
-  <i class="fas fa-circle-notch fa-spin fa-9x"></i>
-</section>
+<!--<section class="spinner">-->
+  <!--<i class="fas fa-circle-notch fa-spin fa-9x"></i>-->
+<!--</section>-->
 
 
 <section class="mensaje" *ngIf="ready" [hidden]="listadojugadores.length > 0">
