--- a/src/app/components/equipos/equipos.component.html
+++ b/src/app/components/equipos/equipos.component.html
@@ -8,18 +8,24 @@
     <button class="btn" (click)="generateEquipos()" style="margin-right: 6px"><span style="margin-right: 6px" *ngIf="generandoEquipos"><i class="fas fa-circle-notch fa-spin"></i></span>Generar Equipos</button>
     <button class="btn" (click)="vaciarEquipos()" style="margin-right: 6px"><span style="margin-right: 6px" *ngIf="vaciarJugadoresEquipo"><i class="fas fa-circle-notch fa-spin"></i></span>Vaciar jugadores de Equipo</button>
   </section>
-  <h3 class="ronda" *ngIf="equipoSelector">Ronda {{rondaDraft}}</h3>
+  <h3 class="ronda" *ngIf="equipoSelector">Ronda {{draft.rondaDraft}}</h3>
   <section class="cuadroEquipos">
-    <article *ngFor="let e of listadoequipos" [ngStyle]="{'background-color':e.seleccionable == true ? '#212529' : '#495057' }">
+    <article *ngFor="let e of draft.equipos" [ngStyle]="{'background-color':e.seleccionable == true ? '#212529' : '#495057' }">
       <p>{{e.name}}</p>
     </article>
   </section>
 
   <section class="descripcionEquipo">
 
-    <h1 class="c">{{equipoSelector.name}}</h1>
+    <section style="display: flex; justify-content: space-around;align-items: center;padding: 8px">
+      <img src="{{draft.equipoSelector.equipo.escudo}}" width="20px" height="35px">
+      <h1 class="c" style="padding-bottom: 0">{{draft.equipoSelector.equipo.name}}</h1>
+      <img src="{{draft.equipoSelector.equipo.bandera}}" width="35px" height="25px">
+    </section>
+
+    <!--<h1 class="c"><img width="35px" src="{{draft.equipoSelector.equipo.bandera}}">{{draft.equipoSelector.equipo.name}}</h1><img width="35px" src="{{draft.equipoSelector.equipo.escudo}}">-->
     <section class="plantilla">
-      <table class="table table-striped table-hover table-bordered table-dark table-sm" *ngIf="listadojugadoresSeleccionables.length > 0">
+      <table class="table table-striped table-hover table-bordered table-dark table-sm" *ngIf="draft.equipoSelector.equipo.jugadores.length > 0">
         <thead>
         <tr>
           <th scope="col">Nombre</th>
@@ -33,7 +39,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let jugador of equipoSelector.jugadores; let i=index">
+        <tr *ngFor="let jugador of draft.equipoSelector.equipo.jugadores; let i=index">
           <td>{{jugador.name}}</td>
           <td>{{jugador.posicion}}</td>
           <td>{{jugador.atributos.ataque}}</td>
@@ -50,9 +56,20 @@
 
   </section>
 
-  <section class="jugadores">
-    <h3 class="c">Elección de jugador</h3>
-    <table class="table table-striped table-hover table-bordered table-dark table-sm" *ngIf="listadojugadoresSeleccionables.length > 0">
+  <section class="jugadores" [hidden]="draft.jugadores.length === 0">
+    <span style="display: flex;justify-content:space-between;align-items: center">
+      <h3 class="c">Elección de jugador</h3>
+      <select [(ngModel)]="filtros.posicion" (ngModelChange)="filterPosition(filtros.posicion)">
+        <option value="">Todas las posiciones</option>
+        <option value="PIVOT">Pivot</option>
+        <option value="ALAPIVOT">Ala-Pivot</option>
+        <option value="ALERO">Alero</option>
+        <option value="ESCOLTA">Escolta</option>
+        <option value="BASE">Base</option>
+      </select>
+    </span>
+
+    <table class="table table-striped table-hover table-bordered table-dark table-sm" *ngIf="draft.jugadores.length > 0">
       <thead>
       <tr>
         <th scope="col">Editar</th>
@@ -68,7 +85,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let jugador of listadojugadoresSeleccionables; let i=index">
+      <tr *ngFor="let jugador of draft.jugadores; let i=index">
         <td style="text-align: center;"><i class="fas fa-edit"></i></td>
         <td>{{jugador.name}}</td>
         <td>{{jugador.posicion}}</td>
@@ -79,11 +96,11 @@
         <td>{{jugador.atributos.agresividad}}</td>
         <td>{{jugador.atributos.sexualidad}}</td>
         <td>
-          <button [disabled]="max_p" *ngIf="jugador.posicion == 'PIVOT'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button>
-          <button [disabled]="max_ap" *ngIf="jugador.posicion == 'ALA-PIVOT'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button>
-          <button [disabled]="max_a" *ngIf="jugador.posicion == 'ALERO'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button>
-          <button [disabled]="max_e" *ngIf="jugador.posicion == 'ESCOLTA'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button>
-          <button [disabled]="max_b" *ngIf="jugador.posicion == 'BASE'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador)">Seleccionar</button>
+          <button [disabled]="max_p" *ngIf="jugador.posicion == 'PIVOT'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
+          <button [disabled]="max_ap" *ngIf="jugador.posicion == 'ALA-PIVOT'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
+          <button [disabled]="max_a" *ngIf="jugador.posicion == 'ALERO'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
+          <button [disabled]="max_e" *ngIf="jugador.posicion == 'ESCOLTA'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
+          <button [disabled]="max_b" *ngIf="jugador.posicion == 'BASE'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
         </td>
       </tr>
       </tbody>
@@ -92,6 +109,6 @@
   </section>
 </section>
 
-<section class="mensaje" [hidden]="listadojugadoresSeleccionables.length > 0">
+<section class="mensaje" [hidden]="draft.jugadores.length > 0">
   <h3>No hay jugadores seleccionables</h3>
 </section>
