--- a/src/app/components/equipos/equipos.component.css
+++ b/src/app/components/equipos/equipos.component.css
@@ -1,63 +1,16 @@
-.contenedor{
-  padding-top: 65px;
-  display: grid;
-  width: 100%;
-  grid-template-rows: auto auto auto auto auto 1fr;
-  grid-template-columns: auto 1fr;
-
-  grid-template-areas:
-    "titulo botones"
-    "ronda ronda"
-    "cuadroEquipos cuadroEquipos"
-    "descripcionEquipo descripcionEquipo"
-    "jugadores jugadores";
-  align-items: center;
-}
-
-.contenedor h1 {
-  grid-area: titulo;
-
-  color: white;
-  font-weight: 300;
-
-  padding-bottom: 32px;
-}
-
-.ronda {
-  grid-area: ronda;
-
-  color: white;
+h1,h2,h3,h4,h5,h6{
   font-weight: lighter;
 }
 
-.botones {
-  grid-area: botones;
-  justify-self: end;
-
-  padding-bottom: 32px;
+tr{
+font-size: 12px;
 }
 
-.total{
-  grid-area: total;
-  justify-self: end;
-
+select{
+  padding: 6px;
+  border-radius: 7px;
+  background-color: #2c3034;
   color: white;
-  font-size: 20px;
-  font-weight: lighter;
-}
-
-.jugadores {
-  grid-area: jugadores;
-  /*padding: 16px;*/
-  /*background-color: #1d2124;*/
-  margin-top: 16px;
-}
-
-.jugadores h3{
-  color: white;
-  font-weight: lighter;
-  padding: 0px 8px 8px 8px;
-  text-align: center;
 }
 
 .mensaje{
@@ -76,76 +29,136 @@
   font-weight: lighter;
 }
 
-.cuadroEquipos{
-  grid-area: cuadroEquipos;
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  justify-content: flex-start;
-  margin-bottom: 16px;
-  /*background-color: #1d2124;*/
-
-}
-
-.cuadroEquipos > article {
-  background-color: #1d2124;
-  padding: 0px 5px 2px 5px;
-  margin-top: 0px;
-  margin: 6px;
-  /*border : solid #333333 thin;*/
-  font-weight: lighter;
-  color: white;
-  border-radius: 5px;
-}
-
-.descripcionEquipo{
-  grid-area: descripcionEquipo;
+.contenedor{
+  padding-top: 65px;
   display: grid;
-
-  background-color: #1d2124;
-  grid-template-rows: auto auto;
-  grid-template-columns: auto ;
-  grid-template-areas:
-  "nombreEquipo"
-  "plantilla";
+  width: 100%;
+  grid-template-rows: auto auto auto auto auto 1fr;
+  grid-template-columns: auto;
+  align-items: center;
 }
 
-.descripcionEquipo .plantilla{
-  grid-area: plantilla;
-  padding: 0px 16px 0px 16px;
-}
-.descripcionEquipo .datos{
-  grid-area: datos;
+/*PRIMERA SECCIÓN ----> CABECERA*/
+section.contenedor section:nth-of-type(1){
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: auto auto;
 }
 
-.descripcionEquipo > h1,h3{
-  grid-area: nombreEquipo;
+section.contenedor section:nth-of-type(1) h1{
   color: white;
-  font-weight: lighter;
-  justify-self: center;
-  padding: 8px;
+  grid-column: 1 / 2 ;
+  justify-self:start;
 }
 
-.descripcionEquipo h5{
+section.contenedor section:nth-of-type(1) > section.botones{
+  grid-column: 2 / 3 ;
+
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: auto auto auto;
+  align-items: center;
+  justify-content: end;
+  /*justify-items: end;*/
+}
+
+section.contenedor section:nth-of-type(1) > section.botones span{
+  padding: 6px 16px 6px 16px;
+  background-color: #2a2c2d;
   color: white;
-  padding-left: 16px;
-  font-weight: lighter;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
 }
 
+section.contenedor section:nth-of-type(1) > section.botones span:hover{
+  background-color: #959696;
+  color: white;
+}
+/*FIN PRIMERA SECCIÓN ----> CABECERA*/
 
-.cuadroEquipos > article > p {
+/*SEGUNDA SECCIÓN ----> RONDA*/
+section.contenedor section:nth-of-type(2){
+  padding: 16px;
+  text-align: center;
+  color: white;
+}
+
+section.contenedor section:nth-of-type(2) h3{
+  padding: 16px;
   margin: 0px;
 }
+/*FIN SEGUNDA SECCIÓN ----> RONDA*/
 
-select{
-  padding: 6px;
-  border-radius: 7px;
-  width: 20%;
-  background-color: #2c3034;
+/*TERCERA SECCIÓN ----> CHIPS COMUNIDADES*/
+section.contenedor section:nth-of-type(3){
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+section.contenedor section:nth-of-type(3) > article {
+  background-color: #1d2124;
+  padding: 0px 16px 1px 16px;
+  margin-top: 0px;
+  margin: 6px;
+  border : solid #333333 thin;
+  font-weight: lighter;
+  color: #c6c7c7;
+  border-radius: 3px;
+  transition: all 0.2s ease-in-out;
+}
+/*FIN TERCERA SECCIÓN ----> CHIPS COMUNIDADES*/
+
+/*CUARTA SECCIÓN ----> EQUIPO*/
+section.contenedor section:nth-of-type(4){
+  display: grid;
+  grid-template-rows: auto ;
+  grid-template-columns: 1fr;
+
+  margin: 16px 0 16px 0;
+}
+
+section.contenedor section:nth-of-type(4) section:nth-of-type(1){
+  background-color: #212529;
+  justify-content: center;
+  align-items: center;
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+section.contenedor section:nth-of-type(4) section:nth-of-type(1) h1{
+  padding: 0 32px 0 32px;
+}
+
+section.contenedor section:nth-of-type(4) section:nth-of-type(2){
+  padding: 0;
+}
+/*FIN CUARTA SECCIÓN ----> EQUIPO*/
+
+/*QUINTA SECCIÓN ----> JUGADORES*/
+section.contenedor section:nth-of-type(5){
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-template-columns: auto;
+}
+
+section.contenedor section:nth-of-type(5) section {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  background-color: #212529;
   color: white;
 }
 
-tr{
-  font-size: 12px;
+section.contenedor section:nth-of-type(5) section span h3{
+  margin: 0;
+  padding: 16px;
 }
 
+section.contenedor section:nth-of-type(5) section span:nth-of-type(2){
+  justify-self: end;
+  align-self: center;
+  padding-right: 16px;
+}
+/*FIN QUINTA SECCIÓN ----> JUGADORES*/
