--- a/src/app/components/equipos/equipos.component.html
+++ b/src/app/components/equipos/equipos.component.html
@@ -6,9 +6,10 @@
   <section>
     <h1>Equipos</h1>
     <section class="botones">
-      <span (click)="eliminarEquipos()" style="margin-right: 6px" ><span *ngIf="eliminandoEquipos"><i class="fas fa-circle-notch fa-spin" ></i></span> Eliminar Equipos</span>
-      <span (click)="generateEquipos()" style="margin-right: 6px"><span style="margin-right: 6px" *ngIf="generandoEquipos"><i class="fas fa-circle-notch fa-spin"></i></span>Generar Equipos</span>
-      <span (click)="vaciarEquipos()" style="margin-right: 6px"><span style="margin-right: 6px" *ngIf="vaciarJugadoresEquipo"><i class="fas fa-circle-notch fa-spin"></i></span>Vaciar Equipo</span>
+      <button (click)="eliminarEquipos()" style="margin-right: 6px" ><span *ngIf="eliminandoEquipos"><i class="fas fa-circle-notch fa-spin" ></i></span> Eliminar Equipos</button>
+      <button (click)="generateEquipos()" style="margin-right: 6px"><span style="margin-right: 6px" *ngIf="generandoEquipos"><i class="fas fa-circle-notch fa-spin"></i></span>Generar Equipos</button>
+      <button (click)="vaciarEquipos()" style="margin-right: 6px"><span style="margin-right: 6px" *ngIf="vaciarJugadoresEquipo"><i class="fas fa-circle-notch fa-spin"></i></span>Vaciar Equipo</button>
+      <button (click)="guardarDraft()" style="margin-right: 6px"><span style="margin-right: 6px" *ngIf="draft.guardandoDraft"><i class="fas fa-circle-notch fa-spin"></i></span>Guardar Draft</button>
     </section>
   </section>
 
@@ -78,38 +79,38 @@
       </span>
     </section>
     <table class="table table-striped table-hover table-bordered table-dark table-sm" *ngIf="draft.jugadores.length > 0">
-    <thead>
-    <tr>
-    <th scope="col">Nombre</th>
-    <th scope="col">Posición</th>
-    <th scope="col" (click)="ordenarTabla('AT')" style="cursor: pointer">AT</th>
-    <th scope="col" (click)="ordenarTabla('DF')" style="cursor: pointer">DF</th>
-    <th scope="col" (click)="ordenarTabla('REB')" style="cursor: pointer">REB</th>
-    <th scope="col" (click)="ordenarTabla('PAS')" style="cursor: pointer">PAS</th>
-    <th scope="col" (click)="ordenarTabla('AGV')" style="cursor: pointer">AGV</th>
-    <th scope="col" (click)="ordenarTabla('SEX')" style="cursor: pointer">SEX</th>
-    <th scope="col">Seleccionar</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let jugador of draft.jugadores | filtroPosicion : filtros.posicion; let i=index" style="cursor: pointer" >
-    <td>{{jugador.name}}</td>
-    <td>{{jugador.posicion}}</td>
-    <td>{{jugador.atributos.ataque}}</td>
-    <td>{{jugador.atributos.defensa}}</td>
-    <td>{{jugador.atributos.rebotes}}</td>
-    <td>{{jugador.atributos.pase}}</td>
-    <td>{{jugador.atributos.agresividad}}</td>
-    <td>{{jugador.atributos.sexualidad}}</td>
-    <td>
-    <button [disabled]="max_p" *ngIf="jugador.posicion == 'PIVOT'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
-    <button [disabled]="max_ap" *ngIf="jugador.posicion == 'ALA-PIVOT'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
-    <button [disabled]="max_a" *ngIf="jugador.posicion == 'ALERO'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
-    <button [disabled]="max_e" *ngIf="jugador.posicion == 'ESCOLTA'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
-    <button [disabled]="max_b" *ngIf="jugador.posicion == 'BASE'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
-    </td>
-    </tr>
-    </tbody>
+      <thead>
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Posición</th>
+          <th scope="col" (click)="ordenarTabla('AT')" style="cursor: pointer">AT</th>
+          <th scope="col" (click)="ordenarTabla('DF')" style="cursor: pointer">DF</th>
+          <th scope="col" (click)="ordenarTabla('REB')" style="cursor: pointer">REB</th>
+          <th scope="col" (click)="ordenarTabla('PAS')" style="cursor: pointer">PAS</th>
+          <th scope="col" (click)="ordenarTabla('AGV')" style="cursor: pointer">AGV</th>
+          <th scope="col" (click)="ordenarTabla('SEX')" style="cursor: pointer">SEX</th>
+          <th scope="col">Seleccionar</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let jugador of draft.jugadores | filtroPosicion : filtros.posicion; let i=index" style="cursor: pointer" >
+          <td>{{jugador.name}}</td>
+          <td>{{jugador.posicion}}</td>
+          <td>{{jugador.atributos.ataque}}</td>
+          <td>{{jugador.atributos.defensa}}</td>
+          <td>{{jugador.atributos.rebotes}}</td>
+          <td>{{jugador.atributos.pase}}</td>
+          <td>{{jugador.atributos.agresividad}}</td>
+          <td>{{jugador.atributos.sexualidad}}</td>
+          <td>
+            <button [disabled]="max_p" *ngIf="jugador.posicion == 'PIVOT'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
+            <button [disabled]="max_ap" *ngIf="jugador.posicion == 'ALA-PIVOT'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
+            <button [disabled]="max_a" *ngIf="jugador.posicion == 'ALERO'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
+            <button [disabled]="max_e" *ngIf="jugador.posicion == 'ESCOLTA'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
+            <button [disabled]="max_b" *ngIf="jugador.posicion == 'BASE'" class="btn btn-primary btn-sm" (click)="seleccionarJugador(jugador,i)">Seleccionar</button>
+          </td>
+      </tr>
+      </tbody>
     </table>
   </section>
 
