--- a/src/app/components/equipos/equipos.component.css
+++ b/src/app/components/equipos/equipos.component.css
@@ -10,9 +10,12 @@ tr{
   padding-top: 65px;
   display: grid;
   width: 100%;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto auto;
   grid-template-columns: auto auto;
   align-items: center;
+
+  grid-gap: 16px;
+
 }
 
 
@@ -26,6 +29,9 @@ section.contenedor section:nth-of-type(1){
   display: grid;
   grid-template-rows: auto;
   grid-template-columns: auto auto;
+
+  /*padding-bottom: 16px;*/
+
 }
 
 section.contenedor section:nth-of-type(1) h1{
@@ -37,7 +43,7 @@ section.contenedor section:nth-of-type(1) h1{
 /*SEGUNDA SECCIÓN ----> LISTADO EQUIPOS*/
 section.contenedor section:nth-of-type(2){
   grid-row: 2 / 3;
-  grid-column: 1 / 2 ;
+  grid-column: 1 / 3 ;
 
   display: flex;
   flex-wrap: wrap;
@@ -47,7 +53,7 @@ section.contenedor section:nth-of-type(2){
 
 section.contenedor section:nth-of-type(2) > article {
   background-color: #1d2124;
-  padding: 16px 16px 16px 16px;
+  padding: 5px 16px 5px 16px;
   margin: 6px;
   border : solid #333333 thin;
   font-weight: lighter;
@@ -58,96 +64,37 @@ section.contenedor section:nth-of-type(2) > article {
 }
 
 /*TERCERA SECCIÓN ----> DETALLES EQUIPO*/
-
-
-
-
-
-
-
-
-
-/*.contenedor{*/
-  /*padding-top: 65px;*/
-  /*display: grid;*/
-  /*width: 100%;*/
-  /*!*height: 100vh;*!*/
-  /*grid-template-rows: auto auto;*/
-  /*grid-template-columns: 1fr 1fr;*/
-
-  /*grid-template-areas:*/
-    /*"titulo titulo"*/
-    /*"listaEquipos contendorEquipo";*/
-  /*!*align-items: center;*!*/
-/*}*/
-
-/*.contenedor h1 {*/
-  /*grid-area: titulo;*/
-  /*color: white;*/
-  /*font-weight: 300;*/
-  /*padding-bottom: 16px;*/
-/*}*/
-
-.contendor .listaEquipos{
-  grid-area:listaEquipos;
-
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.equipos{
-  background-color: #1d2124;
-  padding: 8px 16px 8px 16px;
-  margin: 6px;
-  border : solid #333333 thin;
-  font-weight: lighter;
-  color: #c6c7c7;
-  border-radius: 3px;
-  transition: all 0.2s ease-in-out;
-  cursor: pointer;
-}
-
-.contendor .contendorEquipo{
-  grid-area:contendorEquipo;
-}
-
-.contendorEquipo{
+section.contenedor section:nth-of-type(3){
+  grid-row: 3/4;
+  grid-column: 1 / 3;
 
   display: grid;
-  width: 100%;
-  /*height: 100vh;*/
-  grid-template-rows: 6% auto;
-  grid-template-columns: 10% 90%;
-
-  grid-template-areas:
-    "escudo nombre"
-    "tablaJugadores tablaJugadores";
+  grid-template-rows: auto auto;
+  grid-template-columns: auto auto;
 
   background-color: #1d2124;
-  padding: 8px 16px 8px 16px;
-  margin: 6px;
   border : solid #333333 thin;
   font-weight: lighter;
   color: #c6c7c7;
   border-radius: 3px;
-  align-items: start;
-  /*transition: all 0.2s ease-in-out;*/
+  padding: 8px 16px 8px 16px;
 }
 
-.contendorEquipo .nombre{
-  grid-area:nombre;
+section.contenedor section:nth-of-type(3) > h2 {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
   color: white;
   font-weight: 300;
   margin-bottom: 16px;
 }
 
-.contendorEquipo .tablaJugadores{
-  grid-area: tablaJugadores;
-  font-size: 12px;
+section.contenedor section:nth-of-type(3) > img {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
 }
 
-
+section.contenedor section:nth-of-type(3) > table{
+  grid-row: 2 / 3;
+  grid-column: 1 / 3;
+}
 
