Creado mudulo amistosos

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -13,6 +13,7 @@
       <a class="nav-item nav-link" routerLink="/draft" >Draft</a>
       <a class="nav-item nav-link" routerLink="/jugadores" >Jugadores</a>
       <a class="nav-item nav-link" routerLink="/equipos" >Equipos</a>
+      <a class="nav-item nav-link" routerLink="/amistosos" >Amistosos</a>
     </div>
   </div>
 </nav>
