--- a/src/app/components/equipos/equipos.component.css
+++ b/src/app/components/equipos/equipos.component.css
@@ -13,25 +13,18 @@ tr{
   grid-template-rows: auto auto auto;
   grid-template-columns: auto auto;
   align-items: center;
-
   grid-gap: 16px;
-
 }
-
 
 
 /*PRIMERA SECCIÓN ----> CABECERA*/
 section.contenedor section:nth-of-type(1){
-
   grid-row: 1 / 2;
   grid-column: 1 / 3;
 
   display: grid;
   grid-template-rows: auto;
   grid-template-columns: auto auto;
-
-  /*padding-bottom: 16px;*/
-
 }
 
 section.contenedor section:nth-of-type(1) h1{
@@ -69,7 +62,7 @@ section.contenedor section:nth-of-type(3){
   grid-column: 1 / 3;
 
   display: grid;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto auto auto auto;
   grid-template-columns: auto auto;
 
   background-color: #1d2124;
@@ -93,8 +86,25 @@ section.contenedor section:nth-of-type(3) > img {
   grid-column: 1 / 2;
 }
 
-section.contenedor section:nth-of-type(3) > table{
+section.contenedor section:nth-of-type(3) > h5:nth-of-type(1){
   grid-row: 2 / 3;
+  grid-column: 1 / 3;
+}
+
+section.contenedor section:nth-of-type(3) > table:nth-of-type(1){
+  grid-row: 3 / 4;
+  grid-column: 1 / 3;
+}
+
+section.contenedor section:nth-of-type(3) > h5:nth-of-type(2){
+  grid-row: 4 / 5;
+  grid-column: 1 / 3;
+
+  margin-top: 18px;
+}
+
+section.contenedor section:nth-of-type(3) > table:nth-of-type(2){
+  grid-row: 5 / 6;
   grid-column: 1 / 3;
 }
 
