--- a/src/app/components/equipos/equipos.component.html
+++ b/src/app/components/equipos/equipos.component.html
@@ -20,7 +20,34 @@
     <h2 class="nombre">{{equipoSelected.name}}</h2>
     <img class="escudo" src="{{equipoSelected.escudo}}" width="20px" height="35px">
 
-    <table class="tablaJugadores" *ngIf="equipoSelected.jugadores.length > 0">
+    <h5>Medias</h5>
+    <table>
+      <thead>
+        <tr>
+          <th>Ataque</th>
+          <th>Defensa</th>
+          <th>Rebote</th>
+          <th>Pase</th>
+          <th>Agresividad</th>
+          <th>Sexualidad</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>{{medias.ataque}}</td>
+          <td>{{medias.rebotes}}</td>
+          <td>{{medias.pase}}</td>
+          <td>{{medias.defensa}}</td>
+          <td>{{medias.agresividad}}</td>
+          <td>{{medias.sexualidad}}</td>
+        </tr>
+      </tbody>
+    </table>
+
+
+
+    <h5>Jugadores</h5>
+    <table *ngIf="equipoSelected.jugadores.length > 0">
       <thead>
       <tr>
         <th scope="col">Nombre</th>
@@ -50,7 +77,6 @@
       </tr>
       </tbody>
     </table>
-
   </section>
 
 
