Añadidos gráficos a modulo amistoso
Queda pendiente pulir gráfico

--- a/src/app/components/amistosos/amistosos.component.html
+++ b/src/app/components/amistosos/amistosos.component.html
@@ -66,3 +66,7 @@
   <button style="margin-right: 6px">Jugar</button>
 
 </section>
+
+<div>
+  <canvas id="canvas">{{ chartLocal }}</canvas>
+</div>
