Añadidas funciones de partido

--- a/src/app/components/amistosos/amistosos.component.css
+++ b/src/app/components/amistosos/amistosos.component.css
@@ -96,18 +96,13 @@ button:nth-of-type(1){
   justify-self: center;
 }
 
+.canvas{
+  grid-area: grafico;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+#example{
+  grid-area: example
+}
 
 
 
