--- a/src/app/components/amistosos/amistosos.component.html
+++ b/src/app/components/amistosos/amistosos.component.html
@@ -63,10 +63,10 @@
     </tbody>
   </table>
 
-  <button style="margin-right: 6px">Jugar</button>
+  <button style="margin-right: 6px" [disabled]=" !equipoLocal || !equipoVisitante" (click)="jugarPartido()">Jugar</button>
 
 </section>
 
-<div>
+<section class="canvas">
   <canvas id="canvas">{{ chartLocal }}</canvas>
-</div>
+</section>
