--- a/src/app/components/amistosos/amistosos.component.css
+++ b/src/app/components/amistosos/amistosos.component.css
@@ -23,6 +23,7 @@ select{
   "imgLocal         imgVisitante"
   "tableMediasLocal tableMediasVisitante"
   "botonJugar       botonJugar"
+  "totales            totales"
 ;
   grid-template-rows: auto auto auto auto auto auto auto auto;
   grid-template-columns: auto auto;
@@ -91,19 +92,24 @@ table:nth-of-type(2){
   grid-area: tableMediasVisitante;
 }
 
-button:nth-of-type(1){
+.botones{
   grid-area: botonJugar;
   justify-self: center;
+}
+
+.totales{
+  grid-area: totales;
+  justify-self: center;
+  text-align: center;
+
+  color: white;
+  font-size: 50px;
+  font-weight: bolder;
 }
 
 .canvas{
   grid-area: grafico;
 }
-
-#example{
-  grid-area: example
-}
-
 
 
 
